# starred

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  README.zh-CN.md  pyproject.toml  requirements.txt  setup.py  starred.bak  starred.py
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  pythonpublish.yml  schedule.yml  workflow.yml
starred/: __init__.py  github.py  githubgql.py  starred.py
