[tool.poetry]
name = "starred"
version = "4.3.0"
description = "creating your own Awesome List used GitHub stars!"
authors = ["maguowei <imaguowei@gmail.com>"]
homepage = "https://github.com/maguowei/starred"
repository = "https://github.com/maguowei/starred"
documentation = "https://github.com/maguowei/starred"
keywords = ["GitHub starred", "starred"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
include = ["README.md"]
readme = "README.md"
license = "MIT"

[tool.poetry.scripts]
starred = "starred.starred:starred"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
"requests" = "^2.31.0"
"github3.py" = "^4.0.1"
gql = "^3.5.0"
aiohttp = "^3.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
