[project]
name = "starred"
version = "4.3.0"
description = "creating your own Awesome List used GitHub stars!"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "maguowei", email = "imaguowei@gmail.com" }]
keywords = ["GitHub starred", "starred"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click>=8.1.7",
    "requests>=2.31.0",
    "github3.py>=4.0.1",
    "gql>=3.5.0",
    "aiohttp>=3.9.4",
]

[project.urls]
Homepage = "https://github.com/maguowei/starred"
Repository = "https://github.com/maguowei/starred"
Documentation = "https://github.com/maguowei/starred"

[project.scripts]
starred = "starred.starred:starred"

[dependency-groups]
dev = ["pycodestyle>=2.12.1"]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["starred"]

[tool.hatch.build.targets.sdist]
exclude = [".venv", ".uv-cache"]
